blockml/test/errors/07_model_sql_always_where/e246/e246m.model
model: e246m
sql_always_where: ${f1}   
joins:
- from_view: e246_one
  as: a

fields:
- filter: f1
  result: number
